Fixes #271